# SVFS

./: .gitignore  CMakeLists.txt  CompressionManager.cpp  CompressionManager.h  DatabaseManager.cpp  DatabaseManager.h  EncryptionManager.cpp  EncryptionManager.h  LoginDialog.cpp  LoginDialog.h  MainWindow.cpp  MainWindow.h  PROJECT_REPORT.md  VFSManager.cpp  VFSManager.h  main.cpp  readme.md
build_clean/: CMakeCache.txt  Makefile  cmake_install.cmake  svfs.db
build_clean/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
build_clean/SecureVFS_autogen/: deps  mocs_compilation.cpp
build_clean/SecureVFS_autogen/JCP2AIONHY/: moc_LoginDialog.cpp  moc_LoginDialog.cpp.d  moc_MainWindow.cpp  moc_MainWindow.cpp.d
build_clean/SecureVFS_autogen/RSVETGPPPN/: moc_FileSystemScanner.cpp  moc_FileSystemScanner.cpp.d
build_clean/SecureVFS_autogen/TNQXAZC2F3/: moc_VFSManager.cpp  moc_VFSManager.cpp.d
include/: CompressionManager.h  DatabaseManager.h  EncryptionManager.h  FileSystemScanner.h  MainWindow.h  VFSManager.h
include/core/: CompressionManager.h  DatabaseManager.h  EncryptionManager.h  VFSManager.h
include/scan/: FileSystemScanner.h
include/ui/: LoginDialog.h  MainWindow.h
src/core/: CompressionManager.cpp  DatabaseManager.cpp  EncryptionManager.cpp  VFSManager.cpp
src/scan/: FileSystemScanner.cpp
src/ui/: LoginDialog.cpp  MainWindow.cpp
